avoid formula wrapping

--- a/client-data/tools/katex/katex.css
+++ b/client-data/tools/katex/katex.css
@@ -16,6 +16,7 @@ text {
 
 foreignObject {
 	overflow: visible;
+	white-space: nowrap;
 	user-select:none;
 	-moz-user-select:none;
 }
